--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2018"
 [dependencies]
 async-std = "1.7.0"
 futures = "0.3.8"
+futures-timer = "3.0.2"
 crossterm = {version = "0.18.2", features = ["event-stream"]}
