--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ crossterm = {version = "0.18.2", features = ["event-stream"]}
 curl = "0.4.34"
 select = "0.5.0"
 serde_json = "1.0.59"
+slog = {version = "2.5.2", features = ["max_level_trace","release_max_level_warn"]}
+slog-term = "2.6.0"
+slog-async = "2.5.0"
