--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,15 +8,14 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.34"
-async-std = "1.7.0"
 futures = "0.3.8"
 futures-timer = "3.0.2"
 reqwest = "0.10.9"
 tokio = {version = "0.2.5", features = ["full"]}
 crossterm = {version = "0.18.2", features = ["event-stream"]}
-curl = "0.4.34"
 select = "0.5.0"
 serde_json = "1.0.59"
 slog = {version = "2.5.2", features = ["max_level_trace","release_max_level_warn"]}
 slog-term = "2.6.0"
 slog-async = "2.5.0"
+scopeguard = "1.1.0"
