--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ futures = "0.3"
 futures-timer = "3.0"
 select = "0.6"
 tokio = {version = "1.26", features = ["full"]}
+async-recursion = "1.0"
+async-trait = "0.1"
 
 # web
 reqwest = "0.11"
